--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "express-server",
-    "version": "1.0.0",
-    "description": "A simple Express.js web server",
-    "main": "index.js",
-    "scripts": {
-      "start" : "node app.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "cors": "^2.8.5"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
-  }
-  
+  "name": "express-server",
+  "version": "1.0.0",
+  "description": "A simple Express.js web server",
+  "main": "index.js",
+  "scripts": {
+    "start" : "node app.js",
+    "test": "jest --passWithNoTests"
+
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "jest": "28.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
