Added the docker build step in action workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       
       # Step 5: Build Docker image with commit ID as tag (only if tests pass)
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERID }}/express-server:${{ github.sha::10 }} .
+        run: docker build -t ${{ secrets.DOCKER_USERID }}/express-server:${{ github.sha }} .
         working-directory: /home/runner/work/express-server/express-server/
       
       # Step 6: Push Docker image to Docker Hub (only if tests pass)
@@ -40,5 +40,5 @@ jobs:
         if: success()
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/express-server:${{ github.sha::10 }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/express-server:${{ github.sha }}
 
