--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: |
           docker login -u${{ secrets.DOCKER_USERNAME }} -p${{ secrets.DOCKER_PASSWORD }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/express-server:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERID }}/express-server:${{ github.sha }}
 
